--- a/package.json
+++ b/package.json
@@ -69,8 +69,14 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.4.4",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
     "commitlint": "^17.5.1",
-    "husky": "^8.0.3"
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^8.0.3",
+    "prettier": "^2.4.1"
   },
   "commitlint": {
     "extends": [
