--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "mdb-react-ui-kit": "^6.0.0",
+    "mdbreact": "^5.2.0",
     "normalize.css": "^8.0.1",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
