--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "bootstrap": "^5.3.0-alpha3",
     "classnames": "^2.3.2",
+    "clsx": "^1.2.1",
     "customize-cra": "^1.0.0",
+    "google-map-react": "^2.2.0",
     "history": "^5.3.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
@@ -29,6 +31,7 @@
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-bootstrap": "^2.7.2",
+    "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-intl": "^6.3.2",
     "react-multi-carousel": "^2.8.3",
