--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-app-rewired": "^2.2.1",
     "react-bootstrap": "^2.7.2",
     "react-calendar": "^4.2.1",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-intl": "^6.3.2",
     "react-multi-carousel": "^2.8.3",
