--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "react-calendar": "^4.2.1",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-intl": "^6.3.2",
     "react-multi-carousel": "^2.8.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "recoil": "^0.7.7",
     "redux": "^4.2.1",
     "sass": "^1.60.0",
